--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Flavor Express</title>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
 </body>
 </html>
